--- a/contrib/rpm/epel-7-x86_64-custom.cfg
+++ b/contrib/rpm/epel-7-x86_64-custom.cfg
@@ -12,6 +12,7 @@ config_opts['releasever'] = '7'
 config_opts['bootstrap_image'] = 'quay.io/centos/centos:7'
 config_opts['package_manager'] = 'yum'
 config_opts['description'] = 'CentOS 7 + EPEL'
+config_opts['environment'] = { 'LC_ALL': 'C' }
 
 config_opts['yum_install_command'] += "{% if target_arch in ['x86_64', 'ppc64le', 'aarch64'] %} --disablerepo=centos-sclo*{% endif %}"
 
